# weatho

./: .gitignore  Examples.ipynb  MANIFEST.in  README.md  examples.py  locations.py  setup.cfg  setup.py
data/: DarkSky_45.77,4.84,2021-01-10.json  DarkSky_45.77,4.84,2021-01-11.json  DarkSky_45.77,4.84,2021-01-12.json  DarkSky_45.77,4.84,2021-01-13.json  DarkSky_45.77,4.84,2021-01-14.json  DarkSky_45.77,4.84,2021-01-15.json  DarkSky_45.77,4.84,2021-01-16.json  OWM_45.77,4.84,2021-01-12.json  OWM_45.77,4.84,2021-01-13.json  OWM_45.77,4.84,2021-01-14.json  OWM_45.77,4.84,2021-01-15.json  OWM_45.77,4.84,2021-01-16.json
tests/: test_weatho.py
weatherov/: __init__.py  darksky.py  locations.py  weather.py
weatho/: __init__.py  locations.py  plotting.py  weather.py
